# newspaper-framework

./: .gitignore  AGENTS.md  API_DOKUMENTATION.md  CODE_REVIEW.md  LICENSE  MCP_SERVER.py  PROJEKTANALYSE.md  QWEN.md  README.md  REST_API_EXTENSION_PLAN.md  ROADMAP.md  api_server.py  beispiel_zeitung.html  beispiel_zeitung.json  context.md  logo_variante_1.prompt  logo_variante_2.prompt  logo_variante_3.prompt  newspaper_framework.py  pyproject.toml  requirements.txt  run_api.py  run_mcp.py  sample_generator.py
examples/: demo_newspaper.py
src/api/: mcp_server.py  rest.py
src/newspaper/: __init__.py  core.py  exceptions.py  models.py
src/newspaper/content/: base.py  crossword.py  quiz.py  sudoku.py
src/newspaper/export/: base.py  html_exporter.py  json_exporter.py
src/newspaper/export/templates/: base.html
tests/: test_core.py  test_crossword.py  test_exceptions.py  test_exporters.py  test_models.py  test_quiz.py  test_rest_api.py  test_sudoku.py
